adding a page title

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<html>
+<title>Test Site</title>
+<body>
 <h2 id="section-header">This is the section header</h2>
 <p>
 	<ul>
@@ -5,3 +8,5 @@
 		<li>list item two</li>
 	</ul>
 </p>
+</body>
+</html>
