added a line via text editor

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		<li>list item two</li>
 		<li>list item three</li>
 	</ul>
+
+</p>
+<p>
+This line was added via text editor.
 </p>
 </body>
 </html>
