adding another li

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <li class="li3">list item two</li>
   <li class="li3">list item three</li>
   <li class="li3">adding a fourth line item</li>
+  <li class="li3">yet another li</li>
 </ul>
 <p class="p2"><br></p>
 <p class="p4">This line was added via text editor.</p>
