--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <li class="li3">list item three</li>
   <li class="li3">adding a fourth line item</li>
   <li class="li3">yet another li</li>
+  <li class="li3">and then there was another li</li>
+
 </ul>
 <p class="p2"><br></p>
 <p class="p4">This line was added via text editor.</p>
